--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "watch": "vite build --watch"
   },
   "author": "",
   "license": "ISC",
@@ -56,7 +57,7 @@
     "npm": "^10.8.3",
     "slick-carousel": "^1.8.1",
     "svg4everybody": "^2.1.9",
-    "swiper": "^6.8.4",
+    "swiper": "^11.1.14",
     "throttle-debounce": "^5.0.0",
     "tippy.js": "^6.3.7",
     "uikit": "^2.27.4",
