--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-tap": "^2.0.0",
     "gulplog": "^1.0.0",
+    "hystmodal": "^1.0.1",
     "install": "^0.13.0",
     "jquery": "^3.4.1",
     "jquery-form": "^4.2.2",
