--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "just-validate": "^4.3.0",
     "lightgallery": "^2.4.0",
     "magnific-popup": "^1.1.0",
+    "micromodal": "^0.4.10",
     "normalize.css": "^8.0.1",
     "npm": "^10.8.3",
     "slick-carousel": "^1.8.1",
