--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "browserify": "^17.0.0",
     "choices.js": "^7.0.0",
     "embla-carousel": "^8.5.1",
+    "embla-carousel-autoplay": "^8.5.1",
     "gulp-buffer": "0.0.2",
     "gulp-sass": "^5.1.0",
     "gulp-tap": "^2.0.0",
